# ctfr

./: Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2023-04-05-031001_create_users/: down.sql  up.sql
src/: challenge.rs  main.rs  schema.rs
templates/: base.html.tera  challenges.html.tera  index.html.tera
