[package]
name = "ctfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["mysql"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.3", features = [
    "diesel_mysql_pool",
] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
