[package]
name = "ctfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["mysql"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
axum = "0.6"
tera = "1"
tokio = { version = "1.0", features = ["full"] }
deadpool-diesel = { version = "0.4.1", features = ["mysql"] }
# minify-html-onepass = "0.10.8"
anyhow = "1.0"
minify-html-onepass = { path = "/home/kyle/Nextcloud/Code/minify-html/rust/onepass" }
